playbooks/application/roles/flink/files/jobmanager-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager-webui
  namespace: flink
  labels:
    app: flink
    component: jobmanager
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  ports:
    - name: webui
      port: 8081
      targetPort: 8081
  selector:
    app: flink
    component: jobmanager
