playbooks/application/roles/flink/files/jobmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-jobmanager
  namespace: flink
  labels:
    app: flink
    component: jobmanager
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: rpc
      port: 6123
    - name: blob-server
      port: 6124
    #    - name: webui
    #      port: 8081
    - name: metrics
      port: 9249
  selector:
    app: flink
    component: jobmanager
