playbooks/application/roles/flink/files/taskmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flink
  name: flink-taskmanager
  labels:
    app: flink
    component: taskmanager
spec:
  type: ClusterIP
  clusterIP: None
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  ports:
    - name: metrics
      port: 9249
  selector:
    app: flink
    component: taskmanager
