playbooks/application/roles/flink/files/flink-ingress.yaml
# Ingress resource for Flink UI
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ingress
  namespace: flink
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: flink.scalehub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flink-jobmanager-webui
                port:
                  number: 8081
